<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stats_level"
        android:id="@+id/stats_level"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_weight="0.1"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/stats_exp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="0.1"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_exp"
            android:id="@+id/stats_exp_text"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/stats_exp_current"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stats_exp"
        android:stretchColumns="1"
        android:layout_weight="0.1"
        android:id="@+id/stats_exp_table">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:dividerPadding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/stats_exp_zero"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_column="0"
                android:padding="3dip"/>
            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stats_exp_progress"
                android:max="100"
                android:progress="0"
                android:layout_column="1"
                android:padding="3dip"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100"
                android:id="@+id/stats_exp_needed"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_column="3"
                android:padding="3dip"/>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stats_exp_table"
        android:id="@+id/stats_attack_table"
        android:stretchColumns="0,1"
        android:layout_weight="0.4"
        android:layout_marginTop="20dp">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_health"
                android:id="@+id/stats_health_text"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/stats_health"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_horizontal" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_attack"
                android:id="@+id/stats_attack_text"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/stats_attack"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_horizontal" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_defense"
                android:id="@+id/stats_defense_text"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/stats_defense"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_horizontal" />
        </TableRow>
    </TableLayout>

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:id="@+id/imageView"
        android:layout_marginTop="20dp"
        android:src="@drawable/brobot_logo"
        android:layout_weight="0.3"
        android:layout_gravity="center_horizontal" />

</LinearLayout>