<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/info_row1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:id="@+id/wonIcon"
                    android:src="@drawable/ic_action_crown"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="Won Icon" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/won"
                    android:id="@+id/wonText"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical" />
            </TableRow>
        </TableLayout>

        <View
            android:id="@+id/info_line1"
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background ="@color/main_bg"
            android:layout_below="@+id/info_row1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/won_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="80sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-thin"
            android:text="0"
            android:textColor="@color/white"
            android:layout_below="@+id/info_line1"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/info_row2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/won_counter"
            android:layout_marginTop="20dp">
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:id="@+id/lostIcon"
                    android:src="@drawable/ic_action_battle"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="Lost Icon" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lost"
                    android:id="@+id/lost_text"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical" />
            </TableRow>
        </TableLayout>

        <View
            android:id="@+id/info_line2"
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background ="@color/main_bg"
            android:layout_below="@+id/info_row2"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/lost_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="80sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-thin"
            android:text="0"
            android:textColor="@color/white"
            android:layout_below="@+id/info_line2"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_battles_info"
            android:id="@+id/noBattlesInfo"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-thin"
            android:layout_gravity="center_vertical"
            android:textAlignment="gravity"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</LinearLayout>
